# migration-dashboard

./: README.md  dashboard.html  data_flow_diagram.drawio  migration_assessment_agent.py  migration_epic_plan.csv  migration_nfr_requirements.csv  operational_dependency_diagram.drawio  pyproject.toml  server.py  stories_data.py  strands-agents-beginner-spec.md
migration_dashboard/: __init__.py  gates_data.py  server.py
migration_dashboard/agents/: architecture_review_agent.py  business_case_review_agent.py
migration_dashboard/data/: migration_operational_tracking.csv  migration_resource_plan.csv
migration_dashboard/diagrams/: migration_dependency_diagram.drawio
sample_data/: cpg_app.csv  cpg_infra.csv  health_app.csv  health_infra.csv  scope.txt  scope_cpg.txt
tests/: conftest.py  test_data_integrity.py  test_server.py  test_stories_gates.py
